--- a/meldtokenchecker/package.json
+++ b/meldtokenchecker/package.json
@@ -12,14 +12,24 @@
     "@walletconnect/client": "^1.8.0",
     "@walletconnect/qrcode-modal": "^1.8.0",
     "@walletconnect/web3-provider": "^1.8.0",
+    "assert": "^2.1.0",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "crypto-browserify": "^3.12.0",
     "ethers": "^5.7.2",
     "firebase": "^10.13.2",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "tailwind-merge": "^2.5.2",
+    "url": "^0.11.4",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4",
     "web3modal": "^1.9.12"
   },
@@ -27,8 +37,8 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -51,6 +61,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "customize-cra": "^1.0.0",
+    "gh-pages": "^6.1.1",
+    "react-app-rewired": "^2.2.1"
   }
 }
